--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<section>
-		<h1>Git, GitHub & the Command Line</h1>
-		<p>Gotta love becoming a collaborative coder <3</p>
+		<h1>Getting Into A New Career!</h1>
+		<p>When coding goes from hobby, to bringing home the bacon!</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
